--- a/.github/workflows/workflow_terraform_plan.yml
+++ b/.github/workflows/workflow_terraform_plan.yml
@@ -32,7 +32,7 @@ on:
         required: true
       azure_backend_storage_key:
         required: true
-      github_token:
+      github_pat:
         required: true
       github_owner:
         required: true
@@ -77,7 +77,7 @@ jobs:
         if: success()
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.github_token }}
+          github-token: ${{ secrets.github_pat }}
           script: |
             const fs = require('fs');
             const planOutput = fs.readFileSync('${{ github.workspace }}/${{ inputs.config_directory }}/plan_output.tfplan', 'utf8');
