--- a/.github/workflows/workflow_terraform_plan.yml
+++ b/.github/workflows/workflow_terraform_plan.yml
@@ -56,6 +56,8 @@ jobs:
       ARM_CLIENT_SECRET: ${{ secrets.azure_client_secret }}
       ARM_SNAPSHOT: ${{ inputs.azure_backend_snapshot}}
       ARM_USE_AZUREAD: ${{ inputs.azure_backend_use_azuread }}
+      GITHUB_TOKEN: ${{ secrets.github_pat }}
+      GITHUB_OWNER: ${{ secrets.github_owner }}
 
     steps:
       - name: Checkout Repository
