--- a/.github/workflows/workflow_terraform_plan.yml
+++ b/.github/workflows/workflow_terraform_plan.yml
@@ -22,6 +22,9 @@ on:
         required: false
         type: boolean
         default: false
+      github_owner:
+        required: true
+        type: string
 
     secrets:
       azure_tenant_id:
@@ -42,8 +45,6 @@ on:
         required: true
       github_pat:
         required: true
-      github_owner:
-        required: true
 
 jobs:
   terraform_plan:
@@ -57,7 +58,7 @@ jobs:
       ARM_SNAPSHOT: ${{ inputs.azure_backend_snapshot}}
       ARM_USE_AZUREAD: ${{ inputs.azure_backend_use_azuread }}
       GITHUB_TOKEN: ${{ secrets.github_pat }}
-      GITHUB_OWNER: ${{ secrets.github_owner }}
+      GITHUB_OWNER: ${{ inputs.github_owner }}
 
     steps:
       - name: Checkout Repository
