--- a/.github/workflows/workflow_tf_init_plan_apply.yml
+++ b/.github/workflows/workflow_tf_init_plan_apply.yml
@@ -1,4 +1,4 @@
-name: 'Terraform plan workflow'
+name: 'Terraform init - plan - apply workflow'
 
 on:
   workflow_call:
@@ -87,7 +87,19 @@ jobs:
         id: plan
         working-directory: ${{ inputs.config_directory }}
         run: |
-          terraform plan -no-color | tee plan_output.tfplan
+          terraform plan -no-color -out=plan_output.tfplan | tee plan_output.txt
+
+      - name: Convert Plan to JSON  
+        id: plan_to_json  
+        working-directory: ${{ inputs.config_directory }}  
+        run: |  
+          terraform show -json plan_output.tfplan > plan_output.json  
+    
+      - name: Upload Plan JSON  
+        uses: actions/upload-artifact@v3
+        with:  
+          name: tfplan  
+          path: ${{ inputs.config_directory }}/plan_output.json 
 
       - name: Comment Plan Output
         if: success()
@@ -96,7 +108,7 @@ jobs:
           github-token: ${{ secrets.github_pat }}
           script: |
             const fs = require('fs');
-            const planOutput = fs.readFileSync('${{ github.workspace }}/${{ inputs.config_directory }}/plan_output.tfplan', 'utf8');
+            const planOutput = fs.readFileSync('${{ github.workspace }}/${{ inputs.config_directory }}/plan_output.txt', 'utf8');
             const output = `Terraform Plan Output:\n\`\`\`\n${planOutput}\n\`\`\``;
             github.rest.issues.createComment({
               issue_number: context.issue.number,
@@ -104,3 +116,52 @@ jobs:
               repo: context.repo.repo,
               body: output
             });
+
+  terraform_apply:
+    runs-on: ubuntu-latest
+    name: Plan Terraform Configuration
+    env:
+      ARM_TENANT_ID: ${{ secrets.azure_tenant_id }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.azure_subscription_id }}
+      ARM_CLIENT_ID: ${{ secrets.azure_client_id }}
+      ARM_CLIENT_SECRET: ${{ secrets.azure_client_secret }}
+      ARM_SNAPSHOT: ${{ inputs.azure_backend_snapshot}}
+      ARM_USE_AZUREAD: ${{ inputs.azure_backend_use_azuread }}
+      GITHUB_TOKEN: ${{ secrets.github_pat }}
+      GITHUB_OWNER: ${{ inputs.github_owner }}
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: ${{ inputs.terraform_version }}
+          terraform_wrapper: ${{ inputs.terraform_wrapper }}
+
+      - name: Login to Azure CLI
+        run: az login --service-principal --username ${{ secrets.azure_client_id }} --password ${{ secrets.azure_client_secret }} --tenant ${{ secrets.azure_tenant_id }}  
+
+      - name: Download Plan JSON
+        uses: actions/download-artifact@v3
+        with:
+          name: tfplan
+          path: ${{ inputs.config_directory }}
+        
+      - name: Terraform Init
+        id: init
+        working-directory: ${{ inputs.config_directory }}
+        run: |
+          terraform init \
+            -backend-config="resource_group_name=${{ secrets.azure_backend_resource_group }}" \
+            -backend-config="storage_account_name=${{ secrets.azure_backend_storage_account }}" \
+            -backend-config="container_name=${{ secrets.azure_backend_storage_container }}" \
+            -backend-config="key=${{ secrets.azure_backend_storage_key }}"
+
+      - name: Terraform Apply
+        id: apply
+        working-directory: ${{ inputs.config_directory }}
+        # continue-on-error: true
+        run: |
+          terraform apply -auto-approve "plan_output.tfplan"
