--- a/.github/workflows/workflow_tf_init_plan_apply.yml
+++ b/.github/workflows/workflow_tf_init_plan_apply.yml
@@ -118,8 +118,9 @@ jobs:
             });
 
   terraform_apply:
+    needs: terraform_plan
     runs-on: ubuntu-latest
-    name: Plan Terraform Configuration
+    name: Apply Terraform Configuration
     env:
       ARM_TENANT_ID: ${{ secrets.azure_tenant_id }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.azure_subscription_id }}
