--- a/.github/workflows/workflow_tf_init_plan_apply.yml
+++ b/.github/workflows/workflow_tf_init_plan_apply.yml
@@ -3,6 +3,13 @@ name: 'Terraform init - plan - apply workflow'
 on:
   workflow_call:
     inputs:
+      #Backend Type
+      backend_type:
+        required: true
+        type: string
+        description: 'Type of the backend to use. Valid values are "azure" and "s3".'
+
+      #Azure Backend
       azure_backend_snapshot:
         required: false
         type: boolean
@@ -11,9 +18,46 @@ on:
         required: false
         type: boolean
         default: true
+
+      #S3 Backend
+      aws_region:
+        required: false
+        type: string
+        default: 'eu-frankfurt-1'
+      aws_key:
+        required: true
+        type: string
+      aws_backend_skip_credentials_validation:
+        required: false
+        type: boolean
+        default: true
+      aws_backend_skip_region_validation:
+        required: false
+        type: boolean
+        default: true
+      aws_backend_skip_requesting_account_id:
+        required: false
+        type: boolean
+        default: true
+      aws_backend_skip_metadata_api_check:
+        required: false
+        type: boolean
+        default: true
+      aws_backend_skip_s3_checksum:
+        required: false
+        type: boolean
+        default: true
+      aws_backend_use_path_style:
+        required: false
+        type: boolean
+        default: true
+      
+      #Terraform Configuration
       config_directory:
         required: true
         type: string
+
+      #Terraform Setup
       terraform_version:
         required: false
         type: string
@@ -22,11 +66,14 @@ on:
         required: false
         type: boolean
         default: false
+
+      #GitHub Owner
       github_owner:
         required: true
         type: string
 
     secrets:
+      #Azure
       azure_tenant_id:
         required: true
       azure_subscription_id:
@@ -35,6 +82,8 @@ on:
         required: true
       azure_client_secret:
         required: true
+
+      #Azure Backend
       azure_backend_resource_group:
         required: true
       azure_backend_storage_account:
@@ -43,6 +92,14 @@ on:
         required: true
       azure_backend_storage_key:
         required: true
+
+      #S3 Backend
+      aws_access_key:
+        required: true
+      aws_secret_key:
+        required: true
+
+      #GitHub PAT
       github_pat:
         required: true
 
@@ -51,12 +108,18 @@ jobs:
     runs-on: ubuntu-latest
     name: Plan Terraform Configuration
     env:
+      #Azure
       ARM_TENANT_ID: ${{ secrets.azure_tenant_id }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.azure_subscription_id }}
       ARM_CLIENT_ID: ${{ secrets.azure_client_id }}
       ARM_CLIENT_SECRET: ${{ secrets.azure_client_secret }}
       ARM_SNAPSHOT: ${{ inputs.azure_backend_snapshot}}
       ARM_USE_AZUREAD: ${{ inputs.azure_backend_use_azuread }}
+      #S3
+      AWS_REGION: ${{ inputs.aws_region }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.aws_access_key }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_secret_key }}
+      #GitHub
       GITHUB_TOKEN: ${{ secrets.github_pat }}
       GITHUB_OWNER: ${{ inputs.github_owner }}
 
@@ -73,8 +136,8 @@ jobs:
       # - name: Login to Azure CLI
       #   run: az login --service-principal --username ${{ secrets.azure_client_id }} --password ${{ secrets.azure_client_secret }} --tenant ${{ secrets.azure_tenant_id }}  
 
-      - name: Terraform Init
-        id: init
+      - name: Terraform Init with Azure backend
+        id: init_azure_backend
         working-directory: ${{ inputs.config_directory }}
         run: |
           terraform init \
@@ -82,6 +145,20 @@ jobs:
             -backend-config="storage_account_name=${{ secrets.azure_backend_storage_account }}" \
             -backend-config="container_name=${{ secrets.azure_backend_storage_container }}" \
             -backend-config="key=${{ secrets.azure_backend_storage_key }}"
+      
+      - name: Terraform Init with S3 backend
+        id: init_s3_backend
+        working-directory: ${{ inputs.config_directory }}
+        run: |
+          terraform init \
+            -backend-config="region=${{ inputs.aws_region }}" \
+            -backend-config="key=${{ inputs.aws_key }}" \
+            -backend-config="skip_credentials_validation=${{ inputs.aws_backend_skip_credentials_validation }}" \
+            -backend-config="skip_region_validation=${{ inputs.aws_backend_skip_region_validation }}" \
+            -backend-config="skip_requesting_account_id=${{ inputs.aws_backend_skip_requesting_account_id }}" \
+            -backend-config="skip_metadata_api_check=${{ inputs.aws_backend_skip_metadata_api_check }}" \
+            -backend-config="skip_s3_checksum=${{ inputs.aws_backend_skip_s3_checksum }}" \
+            -backend-config="use_path_style=${{ inputs.aws_backend_use_path_style }}" \
 
       - name: Terraform Plan
         id: plan
